# jthread_cxx17

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: jthread_cxx17.h
test/: CMakeLists.txt  jthread17.cpp
